PostgreSQL: Attempt to subscribe even if it is already added

As the connection could be lost and then reconnected for the same driver
instance then it should just do the LISTEN query as it will not do
anything if it is already subscribed.

Fixes: QTBUG-84356
Change-Id: I6179bca3991c3828ccee066fd96a6e5003c522be
Reviewed-by: Lisandro Damián Nicanor Pérez Meyer <perezmeyer@gmail.com>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit b1af52f2b2e1d318fc7a5481659e8101bf2e18dd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>